# LRI

LRSW/: CMakeLists.txt  LRSW_worker.C  LRSW_worker.h  RFGenerator.h  correlatedDistribution.h  correlatedDistributionGenerator.h  correlationMatrixGenerator.h  ewald.h  simpleLattice.h  walkerGenerator.h
RFGenerator/: CMakeLists.txt  RFGenerator.C  RFGenerator_old.C
plot/: Tcparams.py  TcparamsRange.py  correction.py  estimate.py  extrapolate.py  extrapolate2.py  params.py  plot.py  printHistogram.py
